feat: Adding endpoint POST and GET
