# bin/swagger-output.json
@@ -31,6 +31,10 @@
     {
       "name": "Diskusi",
       "description": "Fitur forum diskusi"
+    },
+    {
+      "name": "Diskusi Balasan",
+      "description": "Fitur balasan diskusi"
     }
   ],
   "schemes": [
@@ -957,6 +961,56 @@
           "200": {
             "description": "OK"
           },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/balasan/": {
+      "post": {
+        "tags": [
+          "Diskusi Balasan"
+        ],
+        "summary": "Menambahkan balasan ke diskusi",
+        "description": "Endpoint untuk menambahkan balasan ke dalam diskusi (hanya Guru BK dan Siswa).",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Data balasan yang akan ditambahkan",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id_diskusi": {
+                  "type": "number",
+                  "example": 1
+                },
+                "isi_balasan": {
+                  "type": "string",
+                  "example": "Ini adalah isi balasan untuk diskusi"
+                },
+                "is_anonim": {
+                  "type": "boolean",
+                  "example": false
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -972,6 +1026,46 @@
             "bearerAuth": []
           }
         ]
+      }
+    },
+    "/balasan/{diskusiId}": {
+      "get": {
+        "tags": [
+          "Diskusi Balasan"
+        ],
+        "summary": "Mendapatkan daftar balasan diskusi",
+        "description": "Endpoint untuk mendapatkan daftar balasan dari sebuah diskusi.",
+        "parameters": [
+          {
+            "name": "diskusiId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID diskusi"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Nomor halaman",
+            "type": "integer",
+            "default": 1
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Jumlah data per halaman (maks 50)",
+            "type": "integer",
+            "default": 25
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
       }
     }
   },
