# routes/index.js
@@ -7,6 +7,7 @@ const authRouter = require("./authRouter");
 const publicRouter = require("./publicRouter");
 const siswaRouter = require("./siswaRouter");
 const diskusiRouter = require("./diskusiRouter");
+const diskusiBalasanRouter = require("./diskusiBalasanRouter");
 
 router.use("/example", Example);
 router.use("/admin", adminRouter);
@@ -15,5 +16,6 @@ router.use("/auth", authRouter);
 router.use("/public", publicRouter);
 router.use("/siswa", siswaRouter);
 router.use("/diskusi", diskusiRouter);
+router.use("/balasan", diskusiBalasanRouter);
 
 module.exports = router;
